--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'src/**'
       - 'lib/**'
+      - '.github/workflows/compile.yml'
 
 jobs:
   compile_firmware:
@@ -16,6 +17,13 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
         
+      - name: Check for Merge Conflicts
+        run: |
+          if git grep -l '<<<<<<< HEAD'; then
+            echo "发现合并冲突！"
+            exit 1
+          fi
+          
       - name: Cache pip
         uses: actions/cache@v2
         with:
