--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -30,20 +30,13 @@ jobs:
         git merge upstream/main --allow-unrelated-histories -m "Merge upstream changes"
 
     - name: Modify DisplayManager.cpp
-      run: |
-        # 使用更稳健的sed语法
-        sed -i '/case 2:/ {
-            :loop
-            N
-            /break;/!b loop
-            a\
-            case 3:\\
-                matrix = new FastLED_NeoMatrix(leds, 32, 8, NEO_MATRIX_TOP + NEO_MATRIX_LEFT + NEO_MATRIX_COLUMNS + NEO_MATRIX_PROGRESSIVE);\\
-                break;\\
-            case 4:\\
-                matrix = new FastLED_NeoMatrix(leds, 32, 8, NEO_MATRIX_TOP + NEO_MATRIX_LEFT + NEO_MATRIX_ROWS + NEO_MATRIX_PROGRESSIVE);\\
-                break;
-                    }' src/DisplayManager.cpp
+      run: >-
+        sed -i '/case 2:/,/break;/ {
+          /break;/a\
+        case 3:\\\n    matrix = new FastLED_NeoMatrix(leds, 32, 8, NEO_MATRIX_TOP + NEO_MATRIX_LEFT + NEO_MATRIX_COLUMNS + NEO_MATRIX_PROGRESSIVE);\\\n    break;\\\ncase 4:\\\n    matrix = new FastLED_NeoMatrix(leds, 32, 8, NEO_MATRIX_TOP + NEO_MATRIX_LEFT + NEO_MATRIX_ROWS + NEO_MATRIX_PROGRESSIVE);\\\n    break;
+        }' src/DisplayManager.cpp
+
+
 
     - name: Verify Modification
       run: grep -A5 'case 3:' src/DisplayManager.cpp || (echo "修改未成功！"; exit 1)
